kubernetes/apps/flux-system/weave-gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-gitops-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cilium 
  rules:
  - host: flux.ashman.world 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ww-gitops-weave-gitops
            port: 
              number: 9001
